frontend/tests/cases/positive/indexed/gadtExample.gr
data Vec (n : Nat) a = Blank
data VecX (a : Type) where
  VecX : ∀ {n : Nat} . Vec n a → VecX a;
  Eh : VecX ()

foo : VecX Int
foo = VecX Blank

bar : forall {a : Type} . VecX a -> Int
bar (VecX Blank) = 42;
bar Eh = 100