frontend/tests/cases/negative/indexed/variableNotInResult.gr
language Report
data VecX (a : Type) where
  VecX : ∀ {n : Nat} . Vec n a → VecX a